--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="#">Productos</a></li>
-                        <li><a href="#">Soluciones</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="#productos">Productos</a></li>
+                        <li><a href="#">Promociones</a></li>
+                        <li><a href="#">Categorias</a></li>
                         <li><a href="#">Compañias</a></li>
                         <li><a href="#">Contactos</a></li>
                     </ul>
@@ -30,10 +30,39 @@
             </div>
             <i class="fa-solid fa-bars" id="icon_menu"></i>
             <div class="header__register">
-                <input type="button" class="btn__header-register" value="Registrarse">
+                <!-- <input type="button" class="btn__header-register" value="Registrarse"> -->
+                <button class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#modalRegistrarse">Registrarse</button>
             </div>    
         </div>
     </header>
+    <div class="modal fade" id="modalRegistrarse" tabindex="-1" area-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header justify-content-center">
+                    <h5 class="modal-title">Registro de Usuarios</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="mt-3">
+                        <input type="text" class="form-control" placeholder="Ingrese su Nombre">     
+                    </div>
+                    <div class="mt-3">
+                        <input type="text" class="form-control" placeholder="Ingrese su Apellido">     
+                    </div>
+                    <div class="mt-3">
+                        <input type="text" class="form-control" placeholder="Telefono Contacto">     
+                    </div>
+                    <div class="mt-3">
+                        <input type="text" class="form-control" placeholder="Ingrese su Email">     
+                    </div>
+                </div>      
+                <div class="modal-footer row m-1">  
+                    <button class="btn btn-success" data-bs-dismiss="modal">Guardar</button>
+                    <button class="btn btn-primary" data-bs-dismiss="modal">Salir</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <main>
         <div class="cover">
@@ -52,7 +81,7 @@
             </div>
         </div>
 
-    <div class="container_slide"> 
+    <div class="container_slide" id="productos"> 
         <h2>Nuestros Productos</h2>  
         <div class="carousel slide" id="controls" data-bs-ride="carousel">
 
