--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="#product">Productos</a></li>
                         <li><a href="#promos">Promociones</a></li>
                         <li><a href="#catego">Categorias</a></li>
-                        <li><a href="#">Compañias</a></li>
+                        <li><a href="#compañia">Compañias</a></li>
                         <li><a href="#contacto">Contactos</a></li>
                     </ul>
                 </nav>
