--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/2cf5102de6.js" crossorigin="anonymous"></script>
     <title>Polleria Kikiri Brasa - El Mejor Sabor del Pollo</title>
+
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
     <header>
@@ -116,24 +125,24 @@
                     <div class="card" style="width: 18rem;">
                         <img src="./media/pollo con jamon y queso2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h5 class="card-title">Filete de Pollo con Jamon y Queso</h5>
+                            <p class="card-text">Filete de Pollo con Jamon y Queso; con papas crocantes y ensaladas; .</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="./media/chicharron pollo.PNG" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h5 class="card-title">Chicharron de Pollo</h5>
+                            <p class="card-text">Crocantes presas de pollo con su toque picantes con su respectiva papas fritas.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="./media/pollo plancha.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h5 class="card-title">Filete de Pollo </h5>
+                            <p class="card-text"> Filete de Pollo tipo Dieta con papas fritas y su porcion de ensalada.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -166,9 +175,28 @@
         </section>
     </main>
     <footer id="contactos">
+        
         <div class="footerContenido container">
-            <h2>Polleria KikiriBrasa</h2>
+            <h1>Polleria KikiriBrasa</h1>
+            <p>En tu casa o en la nuestra no importa donde estés, siempre vamos a engreirte con el gran sabor que nos caracteriza. ¡Gracias por preferirnos!</p>
         </div>
+        <div class="footerSocial container">
+            <a href="https://www.facebook.com/bandaorquesta.losmagnificos" target="_blank" class="social-media-icon">
+                <i class='bx bxl-facebook'></i>
+            </a>
+            <a href="./" class="social-media-icon">
+                <i class='bx bxl-twitter'></i>
+            </a>
+            <a href="./" class="social-media-icon">
+                <i class='bx bxl-instagram'></i>
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=975464565&text=%20Me%20interesa%20saber%20sobre%20la%20Banda%20Orquesta...%20lo%20vi%20en%20la%20Pagina%20WEB" target="_blank" class="social-media-icon">
+                <i class='bx bxl-whatsapp'></i>
+            </a>
+            
+        </div>
+        <p>Encuentranos en nuestras Redes</p>
+
     </footer>
 
 
