--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="#product">Productos</a></li>
-                        <li><a href="#promos">Promociones</a></li>
-                        <li><a href="#catego">Categorias</a></li>
-                        <li><a href="#">Compañias</a></li>
-                        <li><a href="#contacto">Contactos</a></li>
+                        <li><a href="#products">CARTAS</a></li>
+                        <li><a href="#promos">PROMOCIONES</a></li>
+                        <li><a href="#catego">EXTRAS</a></li>
+                        <li><a href="#">NOSOTROS</a></li>
+                        <li><a href="#contacto">CONTACTANOS</a></li>
                     </ul>
                 </nav>
             </div>
@@ -72,33 +72,33 @@
     </header>
     <main>
         <section class="container_cover" id="cover">
-                <div class="cover">
-                    <div class="text__information-cover">
-                        <h1>Somos El Mejor Sabor del Pollo</h1>
-                        <p>Con la receta de nuestros antepasados y los ingredientes de nuestras cosechas, resultados esperados para que ud pueda disfrutar del Sabor del Pollo Campesino</p>
-                        <div class="buttons__cover">
-                            <input type="button" class="btn__register-cover" value="Registrarse">
-                            <input type="button" class="btn__readmore-cover" value="Leer más">
-                        </div>
-                    </div>
-                    <div class="media__cover">
-                        <video src="./media/kikirivideo.webm" autoplay playinline loop muted preload="auto"></video>
+            <div class="cover">
+                <div class="text__information-cover">
+                    <h1>Somos El Mejor Sabor del Pollo</h1>
+                    <p>Con la receta de nuestros antepasados y los ingredientes de nuestras cosechas, resultados esperados para que ud pueda disfrutar del Sabor del Pollo Campesino</p>
+                    <div class="buttons__cover">
+                        <input type="button" class="btn__register-cover" value="Registrarse">
+                        <input type="button" class="btn__readmore-cover" value="Leer más">
                     </div>
                 </div>
+                <div class="media__cover">
+                    <video src="./media/kikirivideo.webm" autoplay playinline loop muted preload="auto"></video>
+                </div>
+            </div>
         </section>
-        <section class="productos" id="product">
+        <section class="productos" id="products">
             <section  class="container_slide" >
-                <h2>Nuestros Productos</h2>
+                <h2>NUESTROS PRODUCTOS</h2>
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./media/promo1.jpg" class="d-block w-200" alt="...">
+                                <img src="./media/promo1.jpg" class="d-block " alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./media/promo2.jpg" class="d-block w-200" alt="...">
+                                <img src="./media/promo2.jpg" class="d-block " alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./media/promo3.png" class="d-block w-200" alt="...">
+                                <img src="./media/promo3.png" class="d-block " alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -110,18 +110,18 @@
                             <span class="visually-hidden"></span>
                         </button>
                 </div>
-            </section>
+            </section>    
         </section>
         <section class="promociones" id="promos">
-            <div class="contenedor">
-                <h2>Promociones</h2>
-                <div class="contenedor-galeria">
-                <img src="media/precio1.jpg" alt="" class="img-promos">
-                <img src="media/precio2.jpg" alt="" class="img-promos">
-                <img src="media/precio3.jpg" alt="" class="img-promos">
-                <img src="media/precio4.jpg" alt="" class="img-promos">
-                <img src="media/precio5.jpg" alt="" class="img-promos">
-                <img src="media/precio6.png" alt="" class="img-promos">
+               
+                <div class="contenedor-galeria contenedor">
+                    <h2>PROMOCIONES</h2>
+                    <img src="media/precio1.jpg" alt="" class="img-promos">
+                    <img src="media/precio2.jpg" alt="" class="img-promos">
+                    <img src="media/precio3.jpg" alt="" class="img-promos">
+                    <img src="media/precio4.jpg" alt="" class="img-promos">
+                    <img src="media/precio5.jpg" alt="" class="img-promos">
+                    <img src="media/precio6.png" alt="" class="img-promos">
 
                 </div>            
             </div>
@@ -129,7 +129,7 @@
         <section class ="categorias" id="catego">
                 
                 <div class="contenedor">
-                    <h2>Platos Extras</h2>
+                    <h2>PLATOS EXTRAS</h2>
                 <div class="container_card">
                     <div class="card" style="width: 18rem;">
                         <img src="./media/pollo con jamon y queso2.png" class="card-img-top" alt="...">
@@ -176,6 +176,14 @@
                         <div class="card-body">
                             <h5 class="card-title">Lomo a lo Pobre</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="./media/pollo con jamon y queso2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Filete de Pollo con Jamon y Queso</h5>
+                            <p class="card-text">Filete de Pollo con Jamon y Queso; con papas crocantes y ensaladas; .</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
