--- a/index.html
+++ b/index.html
@@ -187,6 +187,15 @@
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="./media/pollo con jamon y queso2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Filete de Pollo con Jamon y Queso</h5>
+                            <p class="card-text">Filete de Pollo con Jamon y Queso; con papas crocantes y ensaladas; .</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
