--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <h1>Somos El Mejor Sabor del Pollo</h1>
                     <p>Con la receta de nuestros antepasados y los ingredientes de nuestras cosechas, resultados esperados para que ud pueda disfrutar del Sabor del Pollo Campesino</p>
                     <div class="buttons__cover">
-                        <input type="button" class="btn__register-cover" value="Registrarse">
-                        <input type="button" class="btn__readmore-cover" value="Leer más">
+                        <input type="button" class="btn__register-cover" value="Leer más">
+                        <!---<input type="button" class="btn__readmore-cover" value="Leer más">-->
                     </div>
                 </div>
                 <div class="media__cover">
@@ -121,6 +121,8 @@
                     <img src="media/precio3.jpg" alt="" class="img-promos">
                     <img src="media/precio4.jpg" alt="" class="img-promos">
                     <img src="media/precio5.jpg" alt="" class="img-promos">
+                    <img src="media/precio6.png" alt="" class="img-promos">
+                    <img src="media/precio6.png" alt="" class="img-promos">
                     <img src="media/precio6.png" alt="" class="img-promos">
 
                 </div>            
@@ -180,17 +182,17 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="./media/pollo con jamon y queso2.png" class="card-img-top" alt="...">
+                        <img src="./media/chuleta a lo pobre.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Filete de Pollo con Jamon y Queso</h5>
+                            <h5 class="card-title">Chuleta a lo Pobre</h5>
                             <p class="card-text">Filete de Pollo con Jamon y Queso; con papas crocantes y ensaladas; .</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="./media/pollo con jamon y queso2.png" class="card-img-top" alt="...">
+                        <img src="./media/ceviche_pescado.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Filete de Pollo con Jamon y Queso</h5>
+                            <h5 class="card-title">Ceviche de Pescado</h5>
                             <p class="card-text">Filete de Pollo con Jamon y Queso; con papas crocantes y ensaladas; .</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -206,7 +208,7 @@
             <p>En tu casa o en la nuestra no importa donde estés, siempre vamos a engreirte con el gran sabor que nos caracteriza. ¡Gracias por preferirnos!</p>
         </div>
         <div class="footerSocial container">
-            <a href="https://www.facebook.com/bandaorquesta.losmagnificos" target="_blank" class="social-media-icon">
+            <a href="https://www.facebook.com/kikiriBrasa" target="_blank" class="social-media-icon">
                 <i class='bx bxl-facebook'></i>
             </a>
             <a href="./" class="social-media-icon">
