--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
             <div class="cover">
                 <div class="text__information-cover">
                     <h1>Somos El Mejor Sabor del Pollo</h1>
-                    <p>Con la receta de nuestros antepasados y los ingredientes de nuestras cosechas, resultados esperados para que ud pueda disfrutar del Sabor del Pollo Campesino</p>
+                    <p>Motivados con el crecimiento gastronómico que nuestro país viene generando en los últimos
+                    años, el reconocimiento de los restaurantes peruanos entre los mejores del mundo y el hecho
+                    que Perú sea considerado como el cuarto país emergente del mundo para invertir, ha generado
+                    que se desarrolle nuevos productos y servicios cumpliendo con las exigencias del mercado. Con la receta de nuestros antepasados y los ingredientes de nuestras cosechas, resultados esperados para que ud pueda disfrutar del Sabor del Pollo Campesino</p>
                     <div class="buttons__cover">
                         <input type="button" class="btn__register-cover" value="Leer más">
                         <!---<input type="button" class="btn__readmore-cover" value="Leer más">-->
