--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                     <img src="media/precio4.jpg" alt="" class="img-promos">
                     <img src="media/precio5.jpg" alt="" class="img-promos">
                     <img src="media/precio6.png" alt="" class="img-promos">
-                    <img src="media/precio6.png" alt="" class="img-promos">
-                    <img src="media/precio6.png" alt="" class="img-promos">
+                    <img src="media/precio7.jpg" alt="" class="img-promos">
+                    <img src="media/precio8.jpg" alt="" class="img-promos">
 
                 </div>            
             </div>
