--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    <header>
+    <header id="main-header">
         <div class="container__header">
             <div class="logo">
                 <img src="media/kIkiTrans.png" alt="">
