--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                     <div class="modal-footer row m-1">  
                         <button class="btn btn-success" data-bs-dismiss="modal">Guardar</button>
                         <button class="btn btn-primary" data-bs-dismiss="modal">Salir</button>
-    
                     </div>
                 </div>
             </div>
@@ -117,7 +116,7 @@
         </section>
         <section class="promociones" id="promos">
                
-                <div class="contenedor-galeria contenedor">
+                <div class="contenedor">
                     <h2>PROMOCIONES</h2>
                     <img src="media/precio1.jpg" alt="" class="img-promos">
                     <img src="media/precio2.jpg" alt="" class="img-promos">
